--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ description: "The ITK Mental Health eDischarge messaging components support the 
 sitemap: true
 
 # needed for sitemap.xml file only
-url: https://nhsconnect.github.io/ITK-FHIR-Mental-Health-eDischarge
+url: https://nhsconnect.github.io/ITK-FHIR-Mental-Health-eDischarge
 
 repository: nhsconnect/ITK-FHIR-Mental-Health-eDischarge
 
