Build fixing tag pages

--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -308,8 +308,14 @@ entries:
     - title: Design
       url: /tag_design.html
       output: web
+    - title: Documents
+      url: /tag_documents.html
+      output: web
     - title: Development
       url: /tag_development.html
+      output: web
+    - title: Messaging
+      url: /tag_messaging.html
       output: web
     - title: Support
       url: /tag_support.html
