--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -1,7 +1,7 @@
 entries:
 - title: ITK FHIR Mental Health eDischarge 
   product: ITK FHIR Mental Health eDischarge
-  version: 2.0.0-alpha.1
+  version: 2.1.0-alpha
   levels: one
   folders:
 
