--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -104,9 +104,9 @@ entries:
         - title: Information and advice given
           url: /explore_information_and_advice_given.html
           output: web
-        - title: Investigations and procedures requested
-          url: /explore_invest_and_proc_req.html
-          output: web
+        # - title: Investigations and procedures requested
+          # url: /explore_invest_and_proc_req.html
+          # output: web
         - title: Investigation results
           url: /explore_invest_results.html
           output: web
