Change page for message definitions

--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -38,9 +38,9 @@ entries:
     - title: Transport
       url: /explore_transport.html
       output: web
-    - title: Interactions
-      url: /explore_interactions.html
-      output: web
+#    - title: Interactions
+#      url: /explore_interactions.html
+#      output: web
     - title: Document Profiles
       url: /explore_document_profiles.html
       output: web
@@ -55,6 +55,16 @@ entries:
         - title: Encounter
           url: /workflow_encounter.html
           output: web
+  - title: Message Definitions
+    url: /explore_message_definitions.html
+    output: web
+    folderitems:
+    - title: Overview
+      url: /explore_defs_overview.html
+      output: web
+    - title: Mental Health eDischarge
+      url: /explore_MH_eDischarge_def.html
+      output: web 
   - title: Section Headings
     output: web,pdf
     folderitems:
@@ -177,6 +187,12 @@ entries:
       output: web
     - title: Resource Referencing
       url: /build_resource_referencing.html
+      output: web
+    - title: Use of Attachments
+      url: /build_attachments.html
+      output: web
+    - title: Rendering Documents
+      url: /build_rendering.html
       output: web
       subfolders:
       - title: Constructing Clinical Coded Structures
