fixed ITK/ ITK3 inconsistances

--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -1,6 +1,6 @@
 entries:
-- title: ITK3 FHIR Mental Health eDischarge 
-  product: ITK3 FHIR Mental Health eDischarge
+- title: ITK3 Mental Health eDischarge 
+  product: ITK3 Mental Health eDischarge
   version: 2.2.0-alpha
   levels: one
   folders:
