--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -1,7 +1,7 @@
 entries:
 - title: ITK3 Mental Health eDischarge 
   product: ITK3 Mental Health eDischarge
-  version: 2.2.0-alpha
+  version: 2.3.0-beta
   levels: one
   folders:
 
