--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -1,7 +1,7 @@
 entries:
 - title: ITK3 Mental Health eDischarge 
   product: ITK3 Mental Health eDischarge
-  version: 2.6.0-Release Canididate
+  version: 2.5.0-Release Candidate
   levels: one
   folders:
 
