--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -1,7 +1,7 @@
 entries:
 - title: ITK3 Mental Health eDischarge 
   product: ITK3 Mental Health eDischarge
-  version: 2.7.0-public-beta
+  version: 2.8.0-live
   levels: one
   folders:
 
