--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -62,9 +62,9 @@ entries:
 #   - title: Overview
 #      url: /explore_defs_overview.html
 #      output: web
-    - title: Mental Health eDischarge
-      url: /explore_MH_eDischarge_def.html
-      output: web 
+#    - title: Mental Health eDischarge
+#      url: /explore_MH_eDischarge_def.html
+#      output: web 
   - title: Section Headings
     output: web,pdf
     folderitems:
